Factorizes code from asteroid-image and asteroid-image-dev in the asteroid distro and the asteroid-image.bbclass

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -20,7 +20,7 @@ DISTRO = "asteroid"
 DISTRO_NAME = "Asteroid"
 DISTRO_VERSION ?= "${DATE}-snapshot"
 
-DISTRO_FEATURES = "wayland systemd alsa ipv4 ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES = "wayland systemd alsa ipv4 ${DISTRO_FEATURES_LIBC} splash package-management"
 
 PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
