--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -29,3 +29,4 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
 PREFERRED_PROVIDER_udev = "systemd"
+QT_DIR_NAME = ""
