connman: Autorizes more dbus interface needed by lipstick

--- a/recipes-connectivity/connman/connman/connman-dbus.conf
+++ b/recipes-connectivity/connman/connman/connman-dbus.conf
@@ -14,5 +14,7 @@
     <policy context="default">
         <deny send_destination="net.connman"/>
         <allow send_interface="net.connman.Clock"/>
+        <allow send_interface="net.connman.Manager"/>
+        <allow send_interface="net.connman.Technology"/>
     </policy>
 </busconfig>
