Use a qtconnectivity experimental recipe for better Bluetooth Low Energy handling

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -22,6 +22,8 @@ DISTRO_VERSION ?= "${DATE}-snapshot"
 
 DISTRO_FEATURES = "wayland systemd pam pulseaudio alsa ipv4 bluetooth bluez5 splash package-management xattr usbhost usbgadget ${DISTRO_FEATURES_LIBC}"
 
+PREFERRED_VERSION_qtconnectivity = "experimental"
+
 PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
 
