--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -20,7 +20,7 @@ DISTRO = "asteroid"
 DISTRO_NAME = "Asteroid"
 DISTRO_VERSION ?= "${DATE}-snapshot"
 
-DISTRO_FEATURES = "wayland systemd pam pulseaudio alsa ipv4 bluetooth bluez5 splash package-management xattr usbhost usbgadget ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES = "wayland systemd pam pulseaudio alsa ipv4 bluetooth bluez5 splash package-management xattr usbhost usbgadget opengl ${DISTRO_FEATURES_LIBC}"
 
 PREFERRED_VERSION_qtconnectivity = "experimental"
 
