--- a/recipes-nemomobile/mapplauncherd/mapplauncherd-booster-qtcomponents/booster-qtcomponents-qt5.service
+++ b/recipes-nemomobile/mapplauncherd/mapplauncherd-booster-qtcomponents/booster-qtcomponents-qt5.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=Application launch booster for Qt Components on QtQuick2
-After=pre-user-session.target
-Requires=dbus.socket pre-user-session.target
+Requires=dbus.socket asteroid-launcher.service
 
 [Service]
 Type=notify
