dsme: be less verbose for journalctl

--- a/recipes-nemomobile/dsme/dsme/dsme.service
+++ b/recipes-nemomobile/dsme/dsme/dsme.service
@@ -13,7 +13,7 @@ Type=notify
 Environment=BOOTSTATE=USER
 EnvironmentFile=-/run/systemd/boot-status/bootstate
 EnvironmentFile=-/var/lib/environment/dsme/*.conf
-ExecStart=/usr/sbin/dsme -p /usr/lib/dsme/startup.so --systemd
+ExecStart=/usr/sbin/dsme -v 4 -p /usr/lib/dsme/startup.so --systemd
 Restart=always
 RestartSec=1
 StartLimitInterval=600
