--- a/recipes-nemomobile/usb-moded/usb-moded/usb-moded.service
+++ b/recipes-nemomobile/usb-moded/usb-moded/usb-moded.service
@@ -6,7 +6,7 @@ After=local-fs.target dbus.socket
 Conflicts=shutdown.target
 
 [Service]
-Type=notify
+Type=dbus
 TimeoutSec=15
 EnvironmentFile=-/var/lib/environment/usb-moded/*.conf
 EnvironmentFile=-/run/usb-moded/*.conf
