dsme & mce: set DSME_SOCKFILE explicitely to avoid a SIGSEGV on libdsme's dsmesock_default_location

--- a/recipes-nemomobile/dsme/dsme/dsme.service
+++ b/recipes-nemomobile/dsme/dsme/dsme.service
@@ -11,6 +11,7 @@ Type=notify
 # If it doesn't exist, we default to USER
 # This works because EnvironmentFile overrides Environment
 Environment=BOOTSTATE=USER
+Environment=DSME_SOCKFILE=/run/dsme.socket
 EnvironmentFile=-/run/systemd/boot-status/bootstate
 EnvironmentFile=-/var/lib/environment/dsme/*.conf
 ExecStart=/usr/sbin/dsme -v 4 -p /usr/lib/dsme/startup.so --systemd
