--- a/recipes-android/android-init/android-init/android-init.service
+++ b/recipes-android/android-init/android-init/android-init.service
@@ -7,6 +7,7 @@ Conflicts=shutdown.target
 
 [Service]
 Type=simple
+ExecStartPre=/bin/touch /dev/.coldboot_done
 ExecStart=/system/bin/init
 
 [Install]
