asteroid.conf: Update DISTRO_VERSION for the upcoming Alpha

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -18,7 +18,7 @@ MAINTAINER = "Florent Revest <revestflo@gmail.com>"
 # Distro setup
 DISTRO = "asteroid"
 DISTRO_NAME = "Asteroid"
-DISTRO_VERSION ?= "${DATE}-snapshot"
+DISTRO_VERSION ?= "alpha-1.0"
 
 DISTRO_FEATURES = "wayland systemd pam pulseaudio alsa ipv4 bluetooth bluez5 splash package-management xattr usbhost usbgadget opengl ${DISTRO_FEATURES_LIBC}"
 
