--- a/recipes-nemomobile/mapplauncherd/mapplauncherd-booster-qtcomponents/booster-qtcomponents-qt5.service
+++ b/recipes-nemomobile/mapplauncherd/mapplauncherd-booster-qtcomponents/booster-qtcomponents-qt5.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Application launch booster for Qt Components on QtQuick2
 Requires=dbus.socket asteroid-launcher.service
+After=asteroid-launcher.service
 
 [Service]
 Type=notify
