asteroid.conf: Use vmdk fstype for qemux86

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -29,3 +29,5 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = ""
 PREFERRED_PROVIDER_udev = "systemd"
 QT_DIR_NAME = ""
+
+IMAGE_FSTYPES_qemux86 += "vmdk"
