asteroid-launcher: Installs a qemu config file that setups an eglfs/fbdev environment

--- a/recipes-asteroid/asteroid-launcher/asteroid-launcher/default.conf
+++ b/recipes-asteroid/asteroid-launcher/asteroid-launcher/default.conf
@@ -1,2 +1,3 @@
 EGL_PLATFORM=hwcomposer
-LIPSTICK_OPTIONS="-plugin evdevtouch:/dev/input/event0 -platform hwcomposer"
+QT_QPA_PLATFORM=hwcomposer
+LIPSTICK_OPTIONS="-plugin evdevtouch:/dev/input/event0"
