asteroid-launcher: Enable QT_ENABLE_GLYPH_CACHE_WORKAROUND

--- a/recipes-asteroid/asteroid-launcher/asteroid-launcher/default.conf
+++ b/recipes-asteroid/asteroid-launcher/asteroid-launcher/default.conf
@@ -1,3 +1,4 @@
 EGL_PLATFORM=hwcomposer
 QT_QPA_PLATFORM=hwcomposer
 LIPSTICK_OPTIONS="-plugin evdevtouch:/dev/input/event0"
+QT_ENABLE_GLYPH_CACHE_WORKAROUND=true
