--- a/recipes-asteroid/asteroid-launcher/asteroid-launcher/asteroid-launcher.service
+++ b/recipes-asteroid/asteroid-launcher/asteroid-launcher/asteroid-launcher.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=The wayland compositors and desktop of AsteroidOS
-Requires=dbus.socket mce.service
+Requires=dbus.socket
  
 [Service]
 Type=notify
