usb-moded: Initialize iSerial, iManufacturer and iProduct from Android's properties before starting usb-moded

--- a/recipes-nemomobile/usb-moded/usb-moded/usb-moded.service
+++ b/recipes-nemomobile/usb-moded/usb-moded/usb-moded.service
@@ -10,6 +10,7 @@ Type=dbus
 TimeoutSec=15
 EnvironmentFile=-/var/lib/environment/usb-moded/*.conf
 EnvironmentFile=-/run/usb-moded/*.conf
+ExecStartPre=/usr/bin/init_ffs
 ExecStart=/usr/sbin/usb_moded --systemd --force-syslog $USB_MODED_ARGS
 Restart=always
 ExecReload=/bin/kill -HUP $MAINPID
