ngfd: Load ffmemless

--- a/recipes-nemomobile/ngfd/ngfd/ngfd.ini
+++ b/recipes-nemomobile/ngfd/ngfd/ngfd.ini
@@ -1,6 +1,6 @@
 [general]
 plugins = dbus;transform;resource;profile;mce
-plugins-optional = droid-vibrator
+plugins-optional = droid-vibrator;ffmemless
 
 [keytypes]
 sound.repeat     	   = BOOLEAN
