Fixes usage of FILESYSTEM_PERMS_TABLES which fixes the owner of /home/ceres/.config and services relying on this directory such as dconf, solving wallpaper/watchfaces changing

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -31,3 +31,5 @@ PREFERRED_PROVIDER_udev = "systemd"
 QT_DIR_NAME = ""
 
 IMAGE_FSTYPES_qemux86 += "vmdk"
+
+FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/asteroidos-fs-perms.txt"
