asteroid-usbsetup: Replace usb-moded with a systemd unit and a shell script

--- a/recipes-android/android-tools/android-tools/android-tools-adbd.service
+++ b/recipes-android/android-tools/android-tools/android-tools-adbd.service
@@ -1,8 +1,13 @@
 [Unit]
 Description=Android Debug Bridge
+Requires=usb-setup.service
+After=usb-setup.service
 
 [Service]
 Type=simple
 Restart=on-failure
 ExecStart=/usr/bin/adbd
 StandardOutput=null
+
+[Install]
+WantedBy=multi-user.target
