asteroid-launcher.service: Use a Stop timeout in case asteroid-launcher refuses to die

--- a/recipes-asteroid/asteroid-launcher/asteroid-launcher/asteroid-launcher.service
+++ b/recipes-asteroid/asteroid-launcher/asteroid-launcher/asteroid-launcher.service
@@ -1,14 +1,15 @@
 [Unit]
 Description=The wayland compositors and desktop of AsteroidOS
 Requires=dbus.socket
- 
+
 [Service]
 Type=notify
 EnvironmentFile=-/usr/share/asteroid-launcher/vars.conf
 EnvironmentFile=-/var/lib/environment/compositor/*.conf
 ExecStartPre=/bin/sh -ec 'while [ ! -f /dev/.coldboot_done ]; do sleep 1; done'
 ExecStart=/usr/bin/lipstick $LIPSTICK_OPTIONS --systemd
+TimeoutStopSec=3
 Restart=always
- 
+
 [Install]
 WantedBy=default.target
