msyncd: Don't try to run with invoker, avoids spamming the logs with start error and fixes MTP

--- a/recipes-nemomobile/buteo/buteo-syncfw/msyncd.service
+++ b/recipes-nemomobile/buteo/buteo-syncfw/msyncd.service
@@ -6,7 +6,7 @@ After=pre-user-session.target booster-qt5.service booster-qt5-signal.service
 [Service]
 # -G (--global-syms) so that msyncd's plugins can find symbols in msyncd and
 #     in the libraries msyncd is linked to.
-ExecStart=/usr/bin/invoker -G -o -s --type=qt5 /usr/bin/msyncd
+ExecStart=/usr/bin/msyncd
 Restart=always
 
 [Install]
