connman: Allow send to net.connman.Service by default so that msyncd can work correctly. Removes some warnings from journalctl

--- a/recipes-connectivity/connman/connman/connman-dbus.conf
+++ b/recipes-connectivity/connman/connman/connman-dbus.conf
@@ -16,5 +16,6 @@
         <allow send_interface="net.connman.Clock"/>
         <allow send_interface="net.connman.Manager"/>
         <allow send_interface="net.connman.Technology"/>
+        <allow send_interface="net.connman.Service"/>
     </policy>
 </busconfig>
