asteroid.conf: Use Geoclue 0.12.99 by default

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -25,6 +25,8 @@ DISTRO_FEATURES = "wayland systemd pam pulseaudio alsa ipv4 bluetooth bluez5 spl
 PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
 
+PREFERRED_VERSION_geoclue = "0.12.99"
+
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = ""
 PREFERRED_PROVIDER_udev = "systemd"
