ngfd: Load the gst plugin by default

--- a/recipes-nemomobile/ngfd/ngfd/ngfd.ini
+++ b/recipes-nemomobile/ngfd/ngfd/ngfd.ini
@@ -1,6 +1,7 @@
 [general]
-plugins = dbus;transform;resource;profile;mce
-plugins-optional = droid-vibrator;ffmemless
+plugins = dbus;transform;resource;profile;streamrestore;mce;gst
+plugins-optional = droid-vibrator;ffmemless;callstate
+sink-order = gst
 
 [keytypes]
 sound.repeat     	   = BOOLEAN
