--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -32,6 +32,13 @@ VIRTUAL-RUNTIME_initscripts = ""
 PREFERRED_PROVIDER_udev = "systemd"
 QT_DIR_NAME = ""
 
-IMAGE_FSTYPES_qemux86 += "vmdk"
-
 FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/asteroidos-fs-perms.txt"
+
+IMAGE_FSTYPES_qemux86 += "vmdk"
+# Use vboxvideo instead of uvesafb
+KERNEL_MODULE_AUTOLOAD_append_qemux86 = " vboxvideo"
+KERNEL_MODULE_PROBECONF_append_qemux86 = " vboxvideo"
+KERNEL_MODULE_PROBECONF_append_qemux86 = " uvesafb"
+module_conf_vboxvideo_qemux86 = "blacklist uvesafb"
+
+APPEND_append_qemux86 = " console=ttyS0 video=800x800"
