asteroid-launcher: Configure vboxtouch and eglfs when running in qemux86

--- a/recipes-asteroid/asteroid-launcher/asteroid-launcher/qemu.conf
+++ b/recipes-asteroid/asteroid-launcher/asteroid-launcher/qemu.conf
@@ -1,3 +1,12 @@
 EGL_PLATFORM=fbdev
 QT_QPA_PLATFORM=eglfs
 QT_IM_MODULE=qtvirtualkeyboard
+VIRTUALBOX_TOUCH_EVDEV_MOUSE=/dev/input/event4
+LIPSTICK_OPTIONS="-plugin VBoxTouch -plugin evdevkeyboard"
+QT_QPA_EGLFS_INTEGRATION=none
+QT_QPA_EGLFS_HIDECURSOR=1
+QT_QPA_EGLFS_DISABLE_INPUT=1
+QT_COMPOSITOR_NEGATE_INVERTED_Y=0
+QML_BAD_GUI_RENDER_LOOP=1
+QSG_RENDER_LOOP=basic
+QT_QPA_EGLFS_DEPTH=32
