--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -34,7 +34,7 @@ QT_DIR_NAME = ""
 
 FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/asteroidos-fs-perms.txt"
 
-IMAGE_FSTYPES_qemux86 += "vmdk"
+IMAGE_FSTYPES_qemux86 += "wic.vmdk"
 # Use vboxvideo instead of uvesafb
 KERNEL_MODULE_AUTOLOAD_append_qemux86 = " vboxvideo"
 KERNEL_MODULE_PROBECONF_append_qemux86 = " vboxvideo"
