Removes a totally irrelevant mention of june 2015's asteroid prototype

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -4,6 +4,6 @@ BBPATH .= ":${LAYERDIR}"
 # We have a recipes directory, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "boot2efl-layer"
-BBFILE_PATTERN_boot2efl-layer := "^${LAYERDIR}/"
-BBFILE_PRIORITY_boot2efl-layer = "7"
+BBFILE_COLLECTIONS += "asteroid-layer"
+BBFILE_PATTERN_asteroid-layer := "^${LAYERDIR}/"
+BBFILE_PRIORITY_asteroid-layer = "7"
