--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -33,3 +33,7 @@ PREFERRED_PROVIDER_udev = "systemd"
 QT_DIR_NAME = ""
 
 FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/asteroidos-fs-perms.txt"
+
+PACKAGE_FEED_URIS = "https://release.asteroidos.org/"
+PACKAGE_FEED_BASE_PATHS = "ipk"
+PACKAGE_FEED_ARCHS = "all anthias armv7vehf-neon bass dory i586 lenok qemux86 sparrow sprat sturgeon swift tetra wren"
