--- a/recipes-nemomobile/ngfd/ngfd/ngfd.ini
+++ b/recipes-nemomobile/ngfd/ngfd/ngfd.ini
@@ -1,12 +1,7 @@
 [general]
-plugins = dbus;transform;resource;profile;streamrestore;mce;gst
+plugins = dbus;transform;resource;profile;mce;gst
 plugins-optional = droid-vibrator;ffmemless;callstate
 sink-order = gst
 
 [keytypes]
-sound.repeat     	   = BOOLEAN
-mce.backlight_on 	   = BOOLEAN
-tonegen.pattern  	   = STRING
-tonegen.volume   	   = INTEGER
 core.max_timeout 	   = INTEGER
-transform.allow_custom = BOOLEAN
