initramfs-android-image: Provide a default ANDROID_EXTRA_INITRAMFS_IMAGE_INSTALL at the distro level to fix builds after recent meta-smartphone updates

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -32,6 +32,8 @@ VIRTUAL-RUNTIME_initscripts = ""
 PREFERRED_PROVIDER_udev = "systemd"
 QT_DIR_NAME = ""
 
+ANDROID_EXTRA_INITRAMFS_IMAGE_INSTALL ?= ""
+
 FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/asteroidos-fs-perms.txt"
 
 PACKAGE_FEED_URIS = "https://release.asteroidos.org/"
