--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -39,3 +39,5 @@ FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/asteroidos-fs-perms.txt"
 PACKAGE_FEED_URIS = "https://release.asteroidos.org/nightlies/"
 PACKAGE_FEED_BASE_PATHS = "ipk"
 PACKAGE_FEED_ARCHS = "all anthias armv7vehf-neon bass dory i586 lenok qemux86 sparrow sprat sturgeon swift tetra wren"
+
+SKIP_META_GNOME_SANITY_CHECK = "1"
