--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,3 +7,5 @@ BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
 BBFILE_COLLECTIONS += "asteroid-layer"
 BBFILE_PATTERN_asteroid-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_asteroid-layer = "7"
+
+LAYERSERIES_COMPAT_asteroid-layer = "sumo"
