--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -20,7 +20,7 @@ DISTRO = "asteroid"
 DISTRO_NAME = "Asteroid"
 DISTRO_VERSION ?= "1.0"
 
-DISTRO_FEATURES = "wayland systemd pam pulseaudio alsa ipv4 bluetooth bluez5 splash package-management xattr usbhost usbgadget opengl ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES = "alsa bluetooth bluez5 opengl pam pulseaudio systemd usbhost usbgadget wayland wifi xattr ${DISTRO_FEATURES_LIBC}"
 
 PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
