user services: Rework the way ceres services are launched in a cleaner systemd-wide way. This also makes those recipes less asteroid-spcecific for systems with a different username.

--- a/recipes-asteroid/asteroid-btsyncd/asteroid-btsyncd/asteroid-btsyncd.service
+++ b/recipes-asteroid/asteroid-btsyncd/asteroid-btsyncd/asteroid-btsyncd.service
@@ -2,6 +2,7 @@
 Description=Starts the BLE synchronization daemon
 Requires=dbus.socket
 After=bluetooth.service
+ConditionUser=!root
  
 [Service]
 Type=simple
