asteroid.conf: Update distro name and version to AsteroidOS and snapshot-DATE

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -17,8 +17,8 @@ MAINTAINER = "Florent Revest <revestflo@gmail.com>"
 
 # Distro setup
 DISTRO = "asteroid"
-DISTRO_NAME = "Asteroid"
-DISTRO_VERSION ?= "1.0"
+DISTRO_NAME = "AsteroidOS"
+DISTRO_VERSION ?= "snapshot-${DATE}"
 
 DISTRO_FEATURES = "alsa bluetooth bluez5 opengl pam pulseaudio systemd usbhost usbgadget wayland wifi xattr ${DISTRO_FEATURES_LIBC}"
 
