Define layer as compatible with OE warrior

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILE_COLLECTIONS += "asteroid-layer"
 BBFILE_PATTERN_asteroid-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_asteroid-layer = "7"
 
-LAYERSERIES_COMPAT_asteroid-layer = "thud"
+LAYERSERIES_COMPAT_asteroid-layer = "warrior"
