--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -18,7 +18,7 @@ MAINTAINER = "Florent Revest <revestflo@gmail.com>"
 # Distro setup
 DISTRO = "asteroid"
 DISTRO_NAME = "AsteroidOS"
-DISTRO_VERSION ?= "snapshot-${DATE}"
+DISTRO_VERSION ?= "1.1-nightly"
 
 DISTRO_FEATURES = "alsa bluetooth bluez5 opengl pam pulseaudio systemd usbhost usbgadget wayland wifi xattr polkit ${DISTRO_FEATURES_LIBC}"
 
