layer: Add debug packages to feed.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,3 +9,5 @@ BBFILE_PATTERN_asteroid-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_asteroid-layer = "7"
 
 LAYERSERIES_COMPAT_asteroid-layer = "warrior"
+
+PACKAGE_FEED += "gdb strace"
