usb-moded: Bump SRCREV to use Mce based battery info. Adds patch to fix compilation issues with regards to undefined errno. Create a file at /run/systemd/boot-status/init-done to indicate to usb-moded that the system has booted, without this usb-moded would ignore any usb-mode request change and stay in charge mode forever.

--- a/recipes-nemomobile/usb-moded/usb-moded/usb-moded.service
+++ b/recipes-nemomobile/usb-moded/usb-moded/usb-moded.service
@@ -11,6 +11,8 @@ TimeoutSec=15
 EnvironmentFile=-/var/lib/environment/usb-moded/*.conf
 EnvironmentFile=-/run/usb-moded/*.conf
 ExecStartPre=/usr/bin/init_ffs
+ExecStartPre=-/bin/mkdir -p /run/systemd/boot-status/
+ExecStartPre=-/bin/touch /run/systemd/boot-status/init-done
 ExecStart=/usr/sbin/usb_moded --systemd --force-syslog $USB_MODED_ARGS
 Restart=always
 ExecReload=/bin/kill -HUP $MAINPID
