--- a/recipes-graphics/ttf-fonts/ttf-asteroid-fonts/69-emoji.conf
+++ b/recipes-graphics/ttf-fonts/ttf-asteroid-fonts/69-emoji.conf
@@ -11,21 +11,21 @@
     <alias binding="weak">
         <family>sans-serif</family>
         <prefer>
-            <family>emoji</family>
+            <family>Twemoji</family>
         </prefer>
     </alias>
 
     <alias binding="weak">
         <family>serif</family>
         <prefer>
-            <family>emoji</family>
+            <family>Twemoji</family>
         </prefer>
     </alias>
 
     <alias binding="weak">
         <family>monospace</family>
         <prefer>
-            <family>emoji</family>
+            <family>Twemoji</family>
         </prefer>
     </alias>
 </fontconfig>
