asteroid-launcher: Stop psplash before starting the launcher. This solves issues where the compositor wouldn't show (smelt) or where a black screen is observed after transitioning the display to an off state (ray, firefish, sawfish, skipjack, catfish).
Signed-off-by: Darrel Griët <dgriet@gmail.com>

--- a/recipes-asteroid/asteroid-launcher/asteroid-launcher/asteroid-launcher.service
+++ b/recipes-asteroid/asteroid-launcher/asteroid-launcher/asteroid-launcher.service
@@ -7,6 +7,7 @@ ConditionUser=!root
 Type=notify
 EnvironmentFile=-/var/lib/environment/compositor/*.conf
 ExecStartPre=/bin/sh -ec 'while [ ! -f /dev/.coldboot_done ]; do sleep 1; done'
+ExecStartPre=/bin/sh -ec '/bin/echo QUIT > /run/psplash_fifo'
 ExecStart=/usr/bin/asteroid-launcher $LIPSTICK_OPTIONS --systemd
 TimeoutStopSec=3
 Restart=always
