supported-languages: Move default locale to the expected location by recent versions of nemo-qml-plugin-systemsettings.
Signed-off-by: Darrel Griët <dgriet@gmail.com>

--- a/recipes-asteroid/supported-languages/supported-languages/localeEnv.conf
+++ b/recipes-asteroid/supported-languages/supported-languages/localeEnv.conf
@@ -1,2 +1,2 @@
 [Service]
-EnvironmentFile=/var/lib/environment/ceres/locale.conf
+EnvironmentFile=/home/.system/var/lib/environment/1000/locale.conf
