--- a/recipes-android/android-init/android-init/android-boot-completed.service
+++ b/recipes-android/android-init/android-init/android-boot-completed.service
@@ -6,7 +6,7 @@ After=asteroid-launcher.service
 [Service]
 Type=simple
 ExecStartPre=-/bin/sleep 10
-ExecStart=/bin/sh -ec 'if [ `getprop sys.boot_completed` != '1' ]; then setprop sys.boot_completed 1; fi'
+ExecStart=/bin/sh -ec 'if [ "`getprop sys.boot_completed`" != '1' ]; then setprop sys.boot_completed 1; fi'
 
 [Install]
 WantedBy=default.target
