--- a/recipes-asteroid/asteroid-launcher/asteroid-launcher/asteroid-launcher.service
+++ b/recipes-asteroid/asteroid-launcher/asteroid-launcher/asteroid-launcher.service
@@ -7,7 +7,7 @@ ConditionUser=!root
 Type=notify
 WorkingDirectory=/
 EnvironmentFile=-/var/lib/environment/compositor/*.conf
-ExecStartPre=/bin/sh -ec 'while [ ! -f /dev/.coldboot_done ]; do sleep 1; done'
+ExecStartPre=/usr/bin/asteroid-launcher-precondition
 ExecStartPre=-/bin/sh -ec '/bin/echo QUIT > /run/psplash_fifo'
 ExecStart=/usr/bin/asteroid-launcher $LIPSTICK_OPTIONS --systemd
 TimeoutStopSec=3
