--- a/recipes-asteroid/asteroid-launcher/asteroid-launcher-configs/default.conf
+++ b/recipes-asteroid/asteroid-launcher/asteroid-launcher-configs/default.conf
@@ -1,5 +1,4 @@
-EGL_PLATFORM=hwcomposer
-QT_QPA_PLATFORM=hwcomposer
-LIPSTICK_OPTIONS="-plugin evdevtouch:/dev/input/event0"
+QT_QPA_PLATFORM=eglfs
+QT_QPA_EGLFS_INTEGRATION=eglfs_kms
 QT_IM_MODULE=qtvirtualkeyboard
-QT_GSTREAMER_CAMERABIN_SRC=droidcamsrc
+LIPSTICK_OPTIONS="-plugin evdevtouch:/dev/input/event0"
