--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,6 +8,6 @@ BBFILE_COLLECTIONS += "asteroid-layer"
 BBFILE_PATTERN_asteroid-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_asteroid-layer = "7"
 
-LAYERSERIES_COMPAT_asteroid-layer = "mickledore"
+LAYERSERIES_COMPAT_asteroid-layer = "mickledore scarthgap"
 
 PACKAGE_FEED += "gdb strace"
