asteroid: Warn upon reference to TMPDIR instead of error
Signed-off-by: Darrel Griët <dgriet@gmail.com>

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -43,3 +43,6 @@ PACKAGE_FEED_ARCHS = "all anthias armv7vehf-neon bass beluga catfish core2-32 do
 SKIP_META_GNOME_SANITY_CHECK = "1"
 
 OLDEST_KERNEL = "3.4"
+
+ERROR_QA:remove = "buildpaths"
+WARN_QA:append = " buildpaths"
