--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -21,6 +21,7 @@ DISTRO_NAME = "AsteroidOS"
 DISTRO_VERSION ?= "1.1-nightly"
 
 DISTRO_FEATURES = "alsa bluetooth bluez5 opengl pam polkit pulseaudio systemd usbhost usbgadget usrmerge wayland wifi xattr ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
 PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
