all: Use 2.0 version of apps

--- a/conf/distro/asteroid.conf
+++ b/conf/distro/asteroid.conf
@@ -18,7 +18,7 @@ MAINTAINER = "Florent Revest <revestflo@gmail.com>"
 # Distro setup
 DISTRO = "asteroid"
 DISTRO_NAME = "AsteroidOS"
-DISTRO_VERSION ?= "1.1-nightly"
+DISTRO_VERSION ?= "2.0"
 
 DISTRO_FEATURES = "alsa bluetooth bluez5 opengl pam polkit pulseaudio systemd usbhost usbgadget usrmerge wayland wifi xattr ${DISTRO_FEATURES_LIBC}"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
@@ -37,7 +37,7 @@ ANDROID_EXTRA_INITRAMFS_IMAGE_INSTALL ?= ""
 
 FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/asteroidos-fs-perms.txt"
 
-PACKAGE_FEED_URIS = "https://release.asteroidos.org/nightlies/"
+PACKAGE_FEED_URIS = "https://release.asteroidos.org/2.0/"
 PACKAGE_FEED_BASE_PATHS = "ipk"
 PACKAGE_FEED_ARCHS = "all anthias armv7vehf-neon bass beluga catfish core2-32 dory emulator firefish harmony hoki inharmony koi lenok minnow mooneye narwhal nemo pike ray skipjack smelt sparrow sprat sturgeon swift tetra triggerfish wren"
 
